Revision history for Datahub-Factory

{{$NEXT}}

    - Changed: Removed non-used dependencies which should be resolved automatically
    - Changed: Upgraded Catmandu 1.0602 to 1.0603

1.6.1  2017-09-04 09:11:34 CEST

    - Fixed: faulty references to deprecated Datahub::Factory::PipelineConfig.

1.6  2017-08-29 17:00:28 CEST

    - Changed: condition property renamed to explicit condition_path.
    - Changed: id_path configuration now done in importer instead of fixer.
    - Changed: All validation of the pipeline consolidated in Pipeline module.
    - Changed: refactored the Condition module.
    - Changed: refactored the Pipeline module.
    - Changed: removed deprecated legacy CLI options from the Pipeline

1.5  2017-08-27 14:38:46 CEST

    - Updated: Catmandu dependency from 1.0304 to 1.0602.
    - fixed: uninitialized error on item_id.
    - fixed: missing add method in stock datahub module.
    - added: verbose output instead of relying on stock log output.
    - changed: refactored the transport command.
    - removed: deprecated cli options and validation.

1.4  2017-07-08 13:40:43 CEST
    - added: JSON importer per issue ##43
    - changed: moved fetching id from item before item is fixed.
    - added: JSON exporter.
    - Fixed #33: Datahub::Factory::Fixer::Condition breaks with too many file opens
    - changed: display counter number in debug information
    - changed: confrom to new Catmandu::Store::Datahub API
    - added: missing dependency Catmandu::Importer::XML
    - fixed: string check condition

1.3  2017-05-12 12:45:35 UTC
	- Improved error handling: try/catch and Catmandu::Error->throw

1.2  2017-05-11 11:48:02 UTC
        - Updated documentation
        - Refactor of Exporter.pm

1.1  2017-05-11 09:27:31 UTC
        - Refactor of conditional Fix modules
        - Updated documentation

1.0  2017-05-09 13:50:42 UTC
        - Updated version number

0.11  2017-05-09 13:42:32 UTC
	- Updated documentation

0.10  2017-04-06 07:12:16 UTC